--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	    <h2>What?</h2>
 	    <p>Join us for a low-key alternative to the Gophercon pubcrawl and enjoy seeing what downtown Denver has to offer.</p>
 	    <p>We will be hosting informal meetups at 3 local coffee shops all within walking distance of the Marriott Hotel. Gophers are invited to stop by for a coffee, and have the chance to chat with other attendees.</p>
-	    <p>Each selected coffee shop is in a different neighborhood of Denver that features numerous resturants and bars. We hope you will enjoy a cup or two of joe and take to exploring the city for dinner or whatever.</p>
-	    <p>The map also features local resturants recommended by <a href="https://www.twitter.com/julia_allyce">@julia_allyce</a>. These are just a handful of resturants in each area. Exploration is encouraged!</p>
+	    <p>Each selected coffee shop is in a different neighborhood of Denver that features numerous restaurants and bars. We hope you will enjoy a cup or two of joe and take to exploring the city for dinner or whatever.</p>
+	    <p>The map also features local restaurants recommended by <a href="https://www.twitter.com/julia_allyce">@julia_allyce</a>. These are just a handful of restaurants in each area. Exploration is encouraged!</p>
     </div>
     <div class="footer">
     	<p>Organizers<br><a href="https://www.twitter.com/julia_allyce">@julia_allyce</a> and <a href="https://www.twitter.com/dgryski">@dgryski</a></p>
