--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Gophercon 2014 - Coffee Hangout</title>
+        <title>GopherCon 2014 - Coffee Hangout</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
     <div class="header">
-	    <h1>Gophercon Coffee Hangout</h1>
+	    <h1>GopherCon Coffee Hangout</h1>
 	    <h2>Friday, April 25th, 2014 @ 5:30pm</h2>
     </div>
     <div class="map-container">
@@ -34,14 +34,14 @@
     </div>
     <div class="description">
 	    <h2>What?</h2>
-	    <p>Join us for a low-key alternative to the Gophercon pubcrawl and enjoy seeing what downtown Denver has to offer.</p>
+	    <p>Join us for a low-key alternative to the GopherCon pubcrawl and enjoy seeing what downtown Denver has to offer.</p>
 	    <p>We will be hosting informal meetups at 3 local coffee shops all within walking distance of the Marriott Hotel. Gophers are invited to stop by for a coffee, and have the chance to chat with other attendees.</p>
 	    <p>Each selected coffee shop is in a different neighborhood of Denver that features numerous restaurants and bars. We hope you will enjoy a cup or two of joe and take to exploring the city for dinner or whatever.</p>
-	    <p>The map also features local restaurants recommended by <a href="https://www.twitter.com/julia_allyce">@julia_allyce</a>. These are just a handful of restaurants in each area. Exploration is encouraged!</p>
+	    <p>The map also features local restaurants recommendations. These are just a handful of restaurants in each area. Exploration is encouraged!</p>
     </div>
     <div class="footer">
     	<p>Organizers<br><a href="https://www.twitter.com/julia_allyce">@julia_allyce</a> and <a href="https://www.twitter.com/dgryski">@dgryski</a></p>
-    	<p><a href="http://gophercon.com/">Official Gophercon Website</a></p>
+    	<p><a href="http://gophercon.com/">Official GopherCon Website</a></p>
     </div>
     </body>
 </html>
