added twitter share link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="header">
 	    <h1>GopherCon Coffee Hangout</h1>
 	    <h2>Friday, April 25th, 2014 @ 5:30pm</h2>
+        <a class="btn btn-blue btn-small" href="https://twitter.com/intent/tweet?text=GopherCon%20Coffee%20Hangout&url=http%3A%2F%2Fjulia-allyce.github.io%2Fgophercon-coffee%2F&hashtags=GopherCon2014">Share on Twitter</a>
     </div>
     <div class="map-container">
 	    <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zoVz61uvSQ7k.kiCgFqfPaIds" class="map-iframe"></iframe>
